# fix-lazy-llms-claude

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.idea-explorer/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: README.md
logs/: execution_claude_transcript.jsonl  experiment_log.txt  paper_writer_prompt.txt  research_prompt.txt  resource_finder_prompt.txt  session_instructions.txt
paper_draft/: main.aux  main.bbl  main.blg  main.out  main.tex  references.bib
paper_draft/commands/: macros.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
papers/: README.md
papers/pages/: 2402.14531_respect_llms_politeness_manifest.txt  2409.01658_sycophancy_pinpoint_tuning_manifest.txt  2510.04950_prompt_politeness_manifest.txt
results/: full_results.json  gsm8k_gpt-4o-mini_results.json  truthfulqa_gpt-4o-mini_results.json
src/: analyze_results.py  experiment.py  run_experiment.py
