[project]
name = "research-workspace"
version = "0.1.0"
description = "Research workspace for experiments"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.77.0",
    "datasets>=4.5.0",
    "matplotlib>=3.10.8",
    "openai>=2.16.0",
    "pandas>=2.3.3",
    "scipy>=1.15.3",
    "tenacity>=9.1.2",
    "tqdm>=4.67.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
